--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
             <div class="footer-section">
                 <h3>Contact Us</h3>
                 <p><i class="fas fa-envelope"></i> info@uniportal.com</p>
-                <p><i class="fas fa-phone"></i> +1 234 567 890</p>
-                <p><i class="fas fa-map-marker-alt"></i> 123 Event Street, City</p>
+                <p><i class="fas fa-phone"></i>+91 1223334444</p>
+                <p><i class="fas fa-map-marker-alt"></i>Lovely Professional University, India</p>
             </div>
         </div>
         <div class="footer-bottom">
